apex-validation-rules/main/default/objects/RecordValidationRuleTranslation__mdt/RecordValidationRuleTranslation__mdt.object-meta.xml
<CustomObject>
    <label>Record Validation Rule Translation</label>
    <pluralLabel>Record Validation Rule Translations</pluralLabel>
</CustomObject>