apex-validation-rules/main/default/objects/RecordValidationRuleTranslation__mdt/fields/LanguageLocaleKey__c.field-meta.xml
<CustomField>
    <fullName>LanguageLocaleKey__c</fullName>
    <label>Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>af</fullName>
                <label>Afrikaans</label>
            </value>
            <value>
                <fullName>sq</fullName>
                <label>Albanian</label>
            </value>
            <value>
                <fullName>am</fullName>
                <label>Amharic</label>
            </value>
            <value>
                <fullName>ar</fullName>
                <label>Arabic</label>
            </value>
            <value>
                <fullName>ar_DZ</fullName>
                <label>Arabic (Algeria)</label>
            </value>
            <value>
                <fullName>ar_BH</fullName>
                <label>Arabic (Bahrain)</label>
            </value>
            <value>
                <fullName>ar_EG</fullName>
                <label>Arabic (Egypt)</label>
            </value>
            <value>
                <fullName>ar_IQ</fullName>
                <label>Arabic (Iraq)</label>
            </value>
            <value>
                <fullName>ar_JO</fullName>
                <label>Arabic (Jordan)</label>
            </value>
            <value>
                <fullName>ar_KW</fullName>
                <label>Arabic (Kuwait)</label>
            </value>
            <value>
                <fullName>ar_LB</fullName>
                <label>Arabic (Lebanon)</label>
            </value>
            <value>
                <fullName>ar_LY</fullName>
                <label>Arabic (Libya)</label>
            </value>
            <value>
                <fullName>ar_MA</fullName>
                <label>Arabic (Morocco)</label>
            </value>
            <value>
                <fullName>ar_OM</fullName>
                <label>Arabic (Oman)</label>
            </value>
            <value>
                <fullName>ar_QA</fullName>
                <label>Arabic (Qatar)</label>
            </value>
            <value>
                <fullName>ar_SA</fullName>
                <label>Arabic (Saudi Arabia)</label>
            </value>
            <value>
                <fullName>ar_SD</fullName>
                <label>Arabic (Sudan)</label>
            </value>
            <value>
                <fullName>ar_SY</fullName>
                <label>Arabic (Syria)</label>
            </value>
            <value>
                <fullName>ar_TN</fullName>
                <label>Arabic (Tunisia)</label>
            </value>
            <value>
                <fullName>ar_AE</fullName>
                <label>Arabic (United Arab Emirates)</label>
            </value>
            <value>
                <fullName>ar_YE</fullName>
                <label>Arabic (Yemen)</label>
            </value>
            <value>
                <fullName>hy</fullName>
                <label>Armenian</label>
            </value>
            <value>
                <fullName>eu</fullName>
                <label>Basque</label>
            </value>
            <value>
                <fullName>bn</fullName>
                <label>Bengali</label>
            </value>
            <value>
                <fullName>bs</fullName>
                <label>Bosnian</label>
            </value>
            <value>
                <fullName>bg</fullName>
                <label>Bulgarian</label>
            </value>
            <value>
                <fullName>my</fullName>
                <label>Burmese</label>
            </value>
            <value>
                <fullName>ca</fullName>
                <label>Catalan</label>
            </value>
            <value>
                <fullName>zh_HK</fullName>
                <label>Chinese (Hong Kong)</label>
            </value>
            <value>
                <fullName>zh_MY</fullName>
                <label>Chinese (Malaysia)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>