apex-validation-rules/main/default/objects/RecordValidationRuleTranslation__mdt/fields/RecordValidationRule__c.field-meta.xml
<CustomField>
    <fullName>RecordValidationRule__c</fullName>
    <label>Record Validation Rule</label>
    <referenceTo>ApexValidationRule__mdt</referenceTo>
    <relationshipLabel>Record Validation Rule Translations</relationshipLabel>
    <relationshipName>RecordValidationRuleTranslations</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>