apex-validation-rules/main/default/objects/RecordValidationRuleTranslation__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>RecordValidationRule__c</columns>
    <columns>LanguageLocaleKey__c</columns>
    <columns>ErrorMessage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>